fixed a case where while crafting, the block in front of you would sometimes disappear

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,15 @@
 {
   "cSpell.words": [
     "armorstand",
+    "autocrafter",
     "cooldown",
     "Datapack",
+    "doesnt",
     "enderman",
     "endername",
+    "enderpearl",
+    "forceload",
+    "overworld",
     "playsound",
     "setblock",
     "tellraw"
